# gptme-contrib

./: package-lock.json  pyproject.toml
.claude/data/sessions/: 019f0bd1-a96e-7802-aeba-f7f8e1ec18f1.json  019f13b8-3423-7d33-a755-a2290b456fe1.json
.skogai/: install.sh
lessons/autonomous/: agent-event-watch-workflow.md  rule-driven-session-gating.md
lessons/patterns/: avoid-deep-nesting.md  data-loader-pr-quality.md
lessons/tools/: gh-pr-checks-exit-code-8.md
lessons/workflow/: agent-workspace-maintenance.md  fork-pr-secrets.md  read-full-github-context.md
logs/: ace_curation_metrics.db  chat.json  post_tool_use.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  subagent_start.json  subagent_stop.json  user_prompt_submit.json
plugins/gptme-tooloutput-trimmer/src/tooloutput_trimmer/: __init__.py
plugins/gptme-tooloutput-trimmer/src/tooloutput_trimmer/hooks/: __init__.py  trimmer.py
scripts/: agent-msg.py  check-claude-usage.sh  check-codex-usage.sh
scripts/github/: activity-gate.sh  self-merge-check.py
state/coordination/: coord.db
tests/: test_self_merge_check.py
