[project]
name = "gptme-contrib-workspace"
version = "0.1.0"
description = "Community contributions and utilities for gptme agents"
requires-python = ">=3.10,<3.14"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "gptmail",
    "gptme-ace",
    "gptme-activity-summary",
    "gptme-attention-tracker",
    "gptme-claude-code",
    "gptme-consortium",
    "gptme-dashboard",
    "gptme-forum",
    "gptme-gptodo",
    "gptme-gupp",
    "gptme-hooks-examples",
    "gptme-imagen",
    "gptme-lsp",
    "gptme-ralph",
    "gptme-retrieval",
    "gptme-sessions",
    "gptme-tts",
    "gptme-user-memories",
    "gptme-voice",
    "gptme-warpgrep",
    "gptme-whatsapp",
    "gptme-wrapped",
    "gptme-youtube",
    "gptme[acp,datascience,pyinstaller,server,sounds]",
    "gptodo",
    "pip>=26.0.1",
]

[dependency-groups]
dev = [
    "flask>=3.0.0",
    "mcp>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
]

[tool.uv.workspace]
members = ["packages/*", "plugins/*"]
exclude = ["packages/__pycache__", "plugins/__pycache__", "packages/tasks"]

[tool.uv.sources]
gptme-runloops = { workspace = true }
gptme-retrieval = { workspace = true }
gptme-user-memories = { workspace = true }
gptme-warpgrep = { workspace = true }
gptme-consortium = { workspace = true }
gptme-youtube = { workspace = true }
gptme-ace = { workspace = true }
gptme-tts = { workspace = true }
gptme-attention-tracker = { workspace = true }
gptme-hooks-examples = { workspace = true }
gptme-gptodo = { workspace = true }
gptme-wrapped = { workspace = true }
gptme-gupp = { workspace = true }
gptme-imagen = { workspace = true }
gptme-ralph = { workspace = true }
gptme-claude-code = { workspace = true }
gptme-lsp = { workspace = true }
gptme-forum = { workspace = true }
gptodo = { workspace = true }
gptme-voice = { workspace = true }
gptme-sessions = { workspace = true }
gptme-activity-summary = { workspace = true }
gptme-whatsapp = { workspace = true }
gptme-dashboard = { workspace = true }
gptmail = { workspace = true }
gptme = { path = "../gptme", editable = true }

[tool.pytest.ini_options]
# Required for cross-package test collection (pytest packages/)
# Without this, multiple packages with tests/__init__.py cause namespace collisions
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # line-too-long: 179 pre-existing violations, fix separately
    "UP006", # non-pep585-annotation: bulk-fix separately
    "UP035", # deprecated-import: bulk-fix separately
]
